--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -2,9 +2,7 @@
 
 .navigation {
     .navbar {
-        padding: 30px 30px;
-        margin-bottom: 10px;
-
+        margin: 40px 0px 30px 0px;
         a {
             text-decoration: none;
             text-transform: uppercase;
