--- a/client/src/Layout/DefaultLayout/DefaultLayout.scss
+++ b/client/src/Layout/DefaultLayout/DefaultLayout.scss
@@ -4,7 +4,7 @@
     min-height: 100vh;
     max-width: 1020px;
     margin: 0 auto;
-    padding: 50px;
+    padding: 50px 0px 10px 0px;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
