--- a/client/src/Layout/DefaultLayout/DefaultLayout.scss
+++ b/client/src/Layout/DefaultLayout/DefaultLayout.scss
@@ -1,44 +1,48 @@
-@import '../../commonstyles/variables.scss';
+@import "../../commonstyles/variables.scss";
 
 .mainContainer {
-    min-height: 100vh;
-    max-width: 1020px;
-    margin: 0 auto;
-    padding: 50px 0px 10px 0px;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    footer {
-        margin-top: auto;
-        font-size: 0.85rem;
-        color: $text-secondary;
-        padding-top: 20px;
-        .socialIcons {
-            i {
-                padding: 8px;
-                &:hover {
-                    color: $text-primary;
-                    cursor: pointer;
-                }
-            }
+  min-height: 100vh;
+  max-width: 1020px;
+  margin: 0 auto;
+  padding: 50px 0px 10px 0px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  footer {
+    margin-top: auto;
+    font-size: 0.85rem;
+    color: $text-secondary;
+    padding-top: 20px;
+    .socialIcons {
+      i {
+        padding: 8px;
+        &:hover {
+          color: $text-primary;
+          cursor: pointer;
         }
+      }
     }
-    .brandName {
-        font-size: 25px;
+  }
+  .brandName {
+    font-size: 25px;
+    .navbar-buttons button {
+      padding: 8px;
+      cursor: pointer;
     }
+  }
 
-    @media only screen and (max-width: 767px) {
-        .deskTopNav {
-            display: none;
-        }
-        footer {
-            display: flex;
-            flex-direction: column-reverse;
-            font-size: 0.7rem;
-            text-align: center;
-            .socialIcons i {
-                padding: 20px;
-            }
-        }
+  @media only screen and (max-width: 767px) {
+    .deskTopNav {
+      display: none;
     }
+    footer {
+      display: flex;
+      flex-direction: column-reverse;
+      font-size: 0.7rem;
+      text-align: center;
+      .socialIcons i {
+        padding: 20px;
+      }
+    }
+  }
 }
