--- a/client/src/containers/HomePage/HomePage.scss
+++ b/client/src/containers/HomePage/HomePage.scss
@@ -2,12 +2,15 @@
     flex: 1 0 0;
     .description {
         font-size: 1.25rem;
-        padding: 40px 0;
+        padding: 20px 0;
     }
 }
 
 @media only screen and (max-width: 767px) {
     .homePage {
         padding-top: 60px;
+        .description{
+            margin-left: 10px;
+        }
     }
 }
